--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "reactjs-booking-app",
+  "author": {
+    "name": "Hassam",
+    "email": "hello@hassam.dev"
+  },
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "fix": "npm run lint && npm run prettier",
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
+    "prettier": "prettier --write ./src/**/*.{js,jsx}",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,10 +25,12 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
-    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "globals": "^15.14.0",
+    "prettier": "^3.4.2",
     "vite": "^6.0.5"
   }
 }
